--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -10,6 +10,9 @@ ja:
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
         email: Eメール
+        name: 名前
+        nickname: ニックネーム
+        userid: ユーザーid
         agreement_terms: 利用規約
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
@@ -26,6 +29,10 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+      profile:
+        school_class: クラス
+        number: 出席番号
+        student_id: 学籍番号
     models:
       user: ユーザー
   devise:
