新しいSNSを追加

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -35,6 +35,9 @@ ja:
         student_id: 学籍番号
         twitter_id: twitterID
         enrolled_year: 入学年
+        instagram_id: InstagramID
+        discord_name: Discordの名前
+        discord_tag: Discordのタグ
     models:
       user: ユーザー
   devise:
