--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,7 @@
 #
 #     I18n.locale = :es
 #
-# This would use the information in config/locales/es.yml.
+# This would use the informations in config/locales/es.yml.
 #
 # The following keys must be escaped otherwise they will not be retrieved by
 # the default I18n backend:
